Project

General

Profile

Actions

Bug #21960

closed

[journal] tags are not being expired if no other clients are registered

Added by Jason Dillaman over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The cls_journal:expire_tags function incorrectly skips over the local image (key=="client_"), so in single-client cases the tag omap keys are never purged after they are no longer required.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #21970: luminous: [journal] tags are not being expired if no other clients are registeredResolvedActions
Copied to rbd - Backport #21971: jewel: [journal] tags are not being expired if no other clients are registeredResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21970: luminous: [journal] tags are not being expired if no other clients are registered added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21971: jewel: [journal] tags are not being expired if no other clients are registered added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF